CallMD/src/objects/Prescribed_Medicine__c.object
<CustomObject>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Prescribed Medicines</relationshipLabel>
        <relationshipName>Prescribed_Medicines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medicine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medicine</label>
        <referenceTo>Medicines__c</referenceTo>
        <relationshipLabel>Prescribed Medicines</relationshipLabel>
        <relationshipName>Prescribed_Medicines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Prescribed Medicines</relationshipLabel>
        <relationshipName>Prescribed_Medicines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Consultation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Open Consultation</label>
        <referenceTo>Open_Consultants__c</referenceTo>
        <relationshipLabel>Prescribed Medicines</relationshipLabel>
        <relationshipName>Prescribed_Medicines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strength_Form__c</fullName>
        <label>Strength &amp; Form</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Synonyms__c</fullName>
        <label>Synonyms</label>
        <type>TextArea</type>
    </fields>
    <label>Prescribed Medicine</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Prescribed Medicine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prescribed Medicines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>